--- a/html.html
+++ b/html.html
@@ -52,8 +52,32 @@
 </div>
 
    <div class="slider">
-       <img class="slider-image" src="assets/105-1056898_clothes-background-images-hd.jpg">
-       <button class="slider-button"> SHOP WITH US </button>
+       <div class="collage">
+           <div class="mon one"> 
+            <img id="glass1" src="assets/one.jpg" alt="glasses for woman">
+            </div>
+           <div class="mon two"> <video id="video1" autoplay > <source src="assets/2.mp4" type=video/mp4 > 
+                                                   <source src="assets/2.ogg" type=video/ogg > </video> </div>
+           <div class="mon three"> <img id="skirt" src="assets/3.jpg" alt="shopr for skirts"> </div>
+           <div class="mon four"> ADD </div>
+           <div class="mon five"> <img id="dressgirls" src="assets/5.jpg" alt="dress for girls"> </div>
+           <div class="mon six"> <img id="cglass1" src="assets/6.jpg" alt="contact glasses for woman"> </div>
+           <div class="mon seven"> MORE </div>
+           <div class="mon eight"> <img id="bcoats" src="assets/8.jpg" alt="jcoats for boys"> </div>
+           <div class="mon nine"> <img id="suit" src="assets/9.jpg" alt="perfectsuit"> </div>
+           <div class="mon ten"> <img id="bsuits" src="assets/10.jpg" alt="suits for boys"> </div>
+           <div class="mon eleven"> <img id="dress" src="assets/11.jpg" alt="shop for dress"> </div>
+           <div class="mon twelve"> <img id="girls" src="assets/12.jpg" alt="shop for girls"> </div>
+           <div class="mon therteen"> <video id="video2" autoplay> <source src="assets/13.mp4" type="video/mp4">
+                                                                            <source src="assets/13.ogg" type="video/ogg">  </video> </div>
+           <div class="mon fourteen"> COLORS </div>
+           <div class="mon fifteen"> <img id="collection" src="assets/15.jpg" alt="collection"> </div>
+           <div class="mon sixteen"> TO LIFE </div>
+           <div class="mon seventeen"> <img id="mcoats" src="assets/17.jpg" alt="coats for men"> </div>
+           <div class="mon eighteen"> <img id="glass2" src="assets/18.jpg" alt="glasses for men"> </div>
+       </div>
+       <!-- <img class="slider-image" src="assets/105-1056898_clothes-background-images-hd.jpg"> -->
+       <!-- <button class="slider-button"> LET'S HAVE FUN! </button> -->
    </div>
 
    <div class="men">
